# eros

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
rs/eros/: Cargo.toml  README.md  build.rs
rs/eros-macros/: Cargo.toml  README.md
rs/eros-macros/src/: lib.rs
rs/eros-macros/tests/: mod.rs
rs/eros-no-std-test/: Cargo.toml
rs/eros-no-std-test/src/: lib.rs
rs/eros/src/: any_error.rs  context.rs  error_union.rs  lib.rs  logging.rs  macros.rs  str_error.rs  sync.rs  type_set.rs  union_to_enum.rs  user_context.rs
rs/eros/tests/: context.rs  trybuild.rs  usability.rs
rs/eros/tests/trybuild/: cannot_call_union_on_traced_union.rs  cannot_call_union_on_traced_union.stderr  cannot_call_union_on_traced_union_result.rs  cannot_call_union_on_traced_union_result.stderr  error_union_with_non_error_does_not_implement_error.stderr  traced_error_with_non_error_does_not_implement_error.rs  traced_error_with_non_error_does_not_implement_error.stderr
src/: any_error.rs  context.rs  error_union.rs  error_union_to_enum.rs  generic_error.rs  lib.rs  macros.rs  one_of.rs  one_of_enum.rs  one_of_to_enum.rs  str.rs  str_error.rs  string_kind.rs  traced_union.rs  type_set.rs  union_to_enum.rs
tests/: anyhow.rs  context.rs  trybuild.rs  usability.rs
tests/trybuild/: cannot_call_traced_on_traced_error.rs  cannot_call_traced_on_traced_error.stderr  cannot_call_traced_on_traced_result.rs  cannot_call_traced_on_traced_result.stderr  cannot_call_union_on_traced_union.rs  cannot_call_union_on_traced_union.stderr  cannot_call_union_on_traced_union_result.rs  cannot_call_union_on_traced_union_result.stderr  traced_error_with_non_error_does_not_implement_error.rs  traced_error_with_non_error_does_not_implement_error.stderr
