[package]
name = "eros"
version = "0.0.15"
edition = "2021"
documentation = "https://docs.rs/eros/"
description = "Context aware, ergonomic and precise error handling."
license = "Apache-2.0"
repository = "https://github.com/mcmah309/eros"
categories = ["rust-patterns"]
keywords = ["error", "error-handling"]
readme = "README.md"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = ["min_specialization"]
# This requires the `min_specialization` feature. Enabling this feature will allow you to call `context` on an `ErrorUnion` to delegate to the underlying type. And improve some operations.
min_specialization = []
