[package]
name = "eros"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/eros/"
description = "Context aware, ergonomic and precise error handling."
license = "Apache-2.0"
repository = "https://github.com/mcmah309/eros"
categories = ["rust-patterns"]
keywords = ["error", "error-handling"]
readme = "README.md"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = ["traced", "min_specialization"]
# Disabling this feature will disable context and backtrace for `TracedError`, 
# turning it into just a new type that may be optimized away. 
# Libraries should consider disabling this, allowing downstream crates to decide.
# Or when trying to optimize the binary.
traced = []
# This requires the `min_specialization` feature. 
# Enabling this feature will allow you to call `context` on an `ErrorUnion` to delegate to the underlying type. 
# And improve some operations.
min_specialization = []
