[package]
name = "eros"
version = "0.2.2"
edition = "2021"
documentation = "https://docs.rs/eros/"
description = "Context aware, ergonomic and precise error handling."
license = "Apache-2.0"
repository = "https://github.com/mcmah309/eros"
categories = ["rust-patterns"]
keywords = ["error", "error-handling"]
readme = "README.md"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
trybuild = "1"

[features]
default = ["traced"]
# Wrapper flag.
# Disabling "context" and "backtrace" turns `TracedError` into a new type that may be optimized away. 
# Libraries should consider disabling this, allowing downstream crates to decide.
# Or when trying to optimize the binary.
traced = ["context", "backtrace"]
# Enables context for `TracedError`
context = []
# Enables backtrace for `TracedError`
backtrace = []
# This requires the `min_specialization` feature. 
# Enabling this feature will allow you to call `context` on an `ErrorUnion` to delegate to the underlying type. 
# And improve some operations.
min_specialization = []
