[package]
name = "eros-macros"
description = "Macro for the eros crate"
version = "0.6.0-rc.10"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mcmah309/eros"
categories = ["rust-patterns"]
keywords = ["error", "error-handling"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
eros = { path = "../eros" }
tokio = { version = "1", features = ["full"] }

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "docsrs",
] # Used in the root .rs file to enable `#![cfg_attr(docsrs, feature(doc_cfg))]`
