[package]
name = "eros"
version = "0.6.0-rc.3"
edition = "2024"
description = "Error handling that is precise, no boilerplate, ergonomic, context aware, and performant."
license = "Apache-2.0"
repository = "https://github.com/mcmah309/eros"
categories = ["rust-patterns"]
keywords = ["error", "error-handling"]
readme = "README.md"

[dependencies]
eros-macros = { version = "0.6.0-rc.3", path = "../eros-macros" }
# Adds `ErrorUnion::anyhow` for converting `anyhow::Error`s into a `ErrorUnion`
anyhow = { version = "1", optional = true }
color-backtrace = { version = "0.7", default-features = false, features = [
    "use-btparse-crate",
], optional = true }
btparse = { version = "0.2", optional = true }


[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
trybuild = "1"

[features]
# Libraries should consider disabling these defaults, allowing downstream crates to decide.
# Or when trying to optimize the binary.
default = ["context", "backtrace"]
# Enables context
context = []
# Enables backtrace
backtrace = []
# Parses and removes the unnecessary noise from the backtrace before printing
better_backtrace = ["backtrace", "dep:color-backtrace", "dep:btparse"]
# Enables location capture
location = []
# Add integration with anyhow
anyhow = ["dep:anyhow"]
