[package]
name = "eros"
version = "0.6.0-rc.6"
edition = "2024"
description = "Error handling that is precise, no boilerplate, ergonomic, context aware, and performant."
license = "Apache-2.0"
repository = "https://github.com/mcmah309/eros"
categories = ["rust-patterns"]
keywords = ["error", "error-handling"]
readme = "README.md"

[dependencies]
eros-macros = { version = "0.6.0-rc.6", path = "../eros-macros" }
# Adds `ErrorUnion::anyhow` for converting `anyhow::Error`s into a `ErrorUnion`
anyhow = { version = "1", optional = true }
color-backtrace = { version = "0.7", default-features = false, features = [
    "use-btparse-crate",
], optional = true }
btparse = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }


[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
trybuild = "1"

[features]
# Libraries should consider disabling these defaults, allowing downstream crates to decide.
# Or when trying to optimize the binary.
default = ["context", "backtrace"]
# Enables context
context = []
# Enables backtrace
backtrace = []
# Parses and removes the unnecessary noise from the backtrace before printing
better_backtrace = ["backtrace", "dep:color-backtrace", "dep:btparse"]
# Enables location capture
location = []
# Add integration with anyhow
anyhow = ["dep:anyhow"]
# Enables `ErrorUnion::log_*` statements and `LogExt` for `Result`. But does not enable a logging backend.
# Libraries can enable this and let a downstream enable a backend.
logging = []
# Enables tracing in `ErrorUnion::log_*` statements. Libraries should not set this.
tracing = ["dep:tracing", "logging"]
# Each `ErrorUnion::log_*` statement will log as debug. Libraries should not set this.
log_debug = []
# Each `ErrorUnion::log_*` statement will log as display. Libraries should not set this.
log_display = []
# Adds context methods that are user facing. Useful for applications reporting error messages to users.
user_context = ["context"]
